--- a/Displays/ImageViewers/ImageViewer.html
+++ b/Displays/ImageViewers/ImageViewer.html
@@ -650,6 +650,8 @@ class ImageViewer(QMdiSubWindow):
             success = False
             if self.isSeries: 
                 success, minimumValue, maximumValue = self.returnUserSelectedLevels()
+                width = maximumValue - minimumValue
+                centre = minimumValue + (width/2)
             if not success or self.isImage:
                 centre, width, maximumValue, minimumValue = self.readLevelsFromDICOMImage()
 
@@ -1680,6 +1682,8 @@ sliders for browsing series of images.</p></div>
             success = False
             if self.isSeries: 
                 success, minimumValue, maximumValue = self.returnUserSelectedLevels()
+                width = maximumValue - minimumValue
+                centre = minimumValue + (width/2)
             if not success or self.isImage:
                 centre, width, maximumValue, minimumValue = self.readLevelsFromDICOMImage()
 
@@ -2595,6 +2599,8 @@ and its colour table in a png file with the path+filename in fileName. </p>
         success = False
         if self.isSeries: 
             success, minimumValue, maximumValue = self.returnUserSelectedLevels()
+            width = maximumValue - minimumValue
+            centre = minimumValue + (width/2)
         if not success or self.isImage:
             centre, width, maximumValue, minimumValue = self.readLevelsFromDICOMImage()
 
