--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -162,15 +162,15 @@ class GraphicsItem(QGraphicsObject):
                 pm = QPixmap(PEN_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.eraseEnabled:
+            elif self.linkToGraphicsView.eraseEnabled:
                 pm = QPixmap(ERASER_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.paintEnabled:
+            elif self.linkToGraphicsView.paintEnabled:
                 pm = QPixmap(BRUSH_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.zoomEnabled:
+            elif self.linkToGraphicsView.zoomEnabled:
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
@@ -791,15 +791,15 @@ def readLevels(path, pixelArray):
                 pm = QPixmap(PEN_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.eraseEnabled:
+            elif self.linkToGraphicsView.eraseEnabled:
                 pm = QPixmap(ERASER_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.paintEnabled:
+            elif self.linkToGraphicsView.paintEnabled:
                 pm = QPixmap(BRUSH_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            if self.linkToGraphicsView.zoomEnabled:
+            elif self.linkToGraphicsView.zoomEnabled:
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
@@ -1494,15 +1494,15 @@ def readLevels(path, pixelArray):
             pm = QPixmap(PEN_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        if self.linkToGraphicsView.eraseEnabled:
+        elif self.linkToGraphicsView.eraseEnabled:
             pm = QPixmap(ERASER_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        if self.linkToGraphicsView.paintEnabled:
+        elif self.linkToGraphicsView.paintEnabled:
             pm = QPixmap(BRUSH_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        if self.linkToGraphicsView.zoomEnabled:
+        elif self.linkToGraphicsView.zoomEnabled:
             pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
