--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsView.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsView.html
@@ -316,7 +316,8 @@ class GraphicsView(QGraphicsView):
                 self.setZoomEnabled(False)
                 self.eraseEnabled = False
                 self.paintEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
             else:
                 self.drawEnabled = False
                 if fromContextMenu:
@@ -336,11 +337,13 @@ class GraphicsView(QGraphicsView):
                 self.eraseEnabled = False
                 self.drawEnabled = False
                 self.paintEnabled = True
-                self.pixelSquareSizeMenu.setEnabled(True)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(True)
                 self.pixelSquareSize = 1
             else:
                 self.paintEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
                 if fromContextMenu:
                     self.sigSetPaintButtonRed.emit(False)
         except Exception as e:
@@ -358,11 +361,13 @@ class GraphicsView(QGraphicsView):
                 self.paintEnabled = False
                 self.setZoomEnabled(False)
                 self.eraseEnabled = True
-                self.pixelSquareSizeMenu.setEnabled(True)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(True)
                 self.pixelSquareSize = 1
             else:
                 self.eraseEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
                 if fromContextMenu:
                     self.sigSetEraseButtonRed.emit(False)
         except Exception as e:
@@ -701,7 +706,8 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
                 self.setZoomEnabled(False)
                 self.eraseEnabled = False
                 self.paintEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
             else:
                 self.drawEnabled = False
                 if fromContextMenu:
@@ -721,11 +727,13 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
                 self.eraseEnabled = False
                 self.drawEnabled = False
                 self.paintEnabled = True
-                self.pixelSquareSizeMenu.setEnabled(True)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(True)
                 self.pixelSquareSize = 1
             else:
                 self.paintEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
                 if fromContextMenu:
                     self.sigSetPaintButtonRed.emit(False)
         except Exception as e:
@@ -743,11 +751,13 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
                 self.paintEnabled = False
                 self.setZoomEnabled(False)
                 self.eraseEnabled = True
-                self.pixelSquareSizeMenu.setEnabled(True)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(True)
                 self.pixelSquareSize = 1
             else:
                 self.eraseEnabled = False
-                self.pixelSquareSizeMenu.setEnabled(False)
+                if self.pixelSquareSizeMenu is not None:
+                    self.pixelSquareSizeMenu.setEnabled(False)
                 if fromContextMenu:
                     self.sigSetEraseButtonRed.emit(False)
         except Exception as e:
@@ -868,7 +878,8 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
             self.setZoomEnabled(False)
             self.eraseEnabled = False
             self.paintEnabled = False
-            self.pixelSquareSizeMenu.setEnabled(False)
+            if self.pixelSquareSizeMenu is not None:
+                self.pixelSquareSizeMenu.setEnabled(False)
         else:
             self.drawEnabled = False
             if fromContextMenu:
@@ -897,11 +908,13 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
             self.paintEnabled = False
             self.setZoomEnabled(False)
             self.eraseEnabled = True
-            self.pixelSquareSizeMenu.setEnabled(True)
+            if self.pixelSquareSizeMenu is not None:
+                self.pixelSquareSizeMenu.setEnabled(True)
             self.pixelSquareSize = 1
         else:
             self.eraseEnabled = False
-            self.pixelSquareSizeMenu.setEnabled(False)
+            if self.pixelSquareSizeMenu is not None:
+                self.pixelSquareSizeMenu.setEnabled(False)
             if fromContextMenu:
                 self.sigSetEraseButtonRed.emit(False)
     except Exception as e:
@@ -985,11 +998,13 @@ QGraphicsView(QGraphicsScene, parent: QWidget = None)</p></div>
             self.eraseEnabled = False
             self.drawEnabled = False
             self.paintEnabled = True
-            self.pixelSquareSizeMenu.setEnabled(True)
+            if self.pixelSquareSizeMenu is not None:
+                self.pixelSquareSizeMenu.setEnabled(True)
             self.pixelSquareSize = 1
         else:
             self.paintEnabled = False
-            self.pixelSquareSizeMenu.setEnabled(False)
+            if self.pixelSquareSizeMenu is not None:
+                self.pixelSquareSizeMenu.setEnabled(False)
             if fromContextMenu:
                 self.sigSetPaintButtonRed.emit(False)
     except Exception as e:
