--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -174,6 +174,8 @@ class GraphicsItem(QGraphicsObject):
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
+            else:
+                QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
@@ -803,6 +805,8 @@ def readLevels(path, pixelArray):
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
+            else:
+                QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
@@ -1506,6 +1510,8 @@ def readLevels(path, pixelArray):
             pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
+        else:
+            QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
     except Exception as e:
         print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
         logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))</code></pre>
