--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -162,20 +162,21 @@ class GraphicsItem(QGraphicsObject):
                 pm = QPixmap(PEN_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.eraseEnabled:
+
+            if self.linkToGraphicsView.eraseEnabled:
                 pm = QPixmap(ERASER_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.paintEnabled:
+
+            if self.linkToGraphicsView.paintEnabled:
                 pm = QPixmap(BRUSH_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.zoomEnabled:
+
+            if self.linkToGraphicsView.zoomEnabled:
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            else:
-                QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
@@ -793,20 +794,21 @@ def readLevels(path, pixelArray):
                 pm = QPixmap(PEN_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.eraseEnabled:
+
+            if self.linkToGraphicsView.eraseEnabled:
                 pm = QPixmap(ERASER_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.paintEnabled:
+
+            if self.linkToGraphicsView.paintEnabled:
                 pm = QPixmap(BRUSH_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            elif self.linkToGraphicsView.zoomEnabled:
+
+            if self.linkToGraphicsView.zoomEnabled:
                 pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
                 cursor = QCursor(pm, hotX=0, hotY=30)
                 QApplication.setOverrideCursor(cursor)
-            else:
-                QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
@@ -1498,20 +1500,21 @@ def readLevels(path, pixelArray):
             pm = QPixmap(PEN_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        elif self.linkToGraphicsView.eraseEnabled:
+
+        if self.linkToGraphicsView.eraseEnabled:
             pm = QPixmap(ERASER_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        elif self.linkToGraphicsView.paintEnabled:
+
+        if self.linkToGraphicsView.paintEnabled:
             pm = QPixmap(BRUSH_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        elif self.linkToGraphicsView.zoomEnabled:
+
+        if self.linkToGraphicsView.zoomEnabled:
             pm = QPixmap(MAGNIFYING_GLASS_CURSOR)
             cursor = QCursor(pm, hotX=0, hotY=30)
             QApplication.setOverrideCursor(cursor)
-        else:
-            QApplication.setOverrideCursor(QCursor(Qt.ArrowCursor))
     except Exception as e:
         print(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))
         logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverEnterEvent: &#39; + str(e))</code></pre>
