--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -28,8 +28,7 @@
 </summary>
 <pre><code class="python">import CoreModules.WriteXMLfromDICOM
 import DICOM.DeveloperTools
-#import CoreModules.WEASEL.DisplayImageDrawROI
-import Library.ImagingTools
+import External.ImagingTools
 import Menus.Tutorial</code></pre>
 </details>
 </section>
