--- a/Displays/ImageViewers/ImageViewerROI.html
+++ b/Displays/ImageViewers/ImageViewerROI.html
@@ -225,8 +225,9 @@ class ImageViewerROI(QMdiSubWindow):
                     msgBox.setWindowTitle(&#34;ROI Name Change&#34;)
                     msgBox.setText(&#34;This name is already in use&#34;)
                     msgBox.exec()
+                    self.cmbNamesROIs.blockSignals(True)
                     cmbNamesROIs.setCurrentText(self.graphicsView.dictROIs.prevRegionName)
-
+                    self.cmbNamesROIs.blockSignals(False)
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e))
                 logger.exception(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e)) 
@@ -366,7 +367,9 @@ class ImageViewerROI(QMdiSubWindow):
                 # Redisplay the current image to show the mask
                 #mask = graphicsView.dictROIs.getMask(region, 1)
                 #graphicsView.graphicsItem.reloadMask(mask)
+                self.cmbNamesROIs.blockSignals(True)
                 self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+                self.cmbNamesROIs.blockSignals(False)
                 self.loadImageInImageItem()
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
@@ -762,9 +765,11 @@ class ImageViewerROI(QMdiSubWindow):
         self.loadImageInImageItem() 
         self.displayROIMeanAndStd()
         if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
+            self.cmbNamesROIs.blockSignals(True)
             self.cmbNamesROIs.clear()
             self.cmbNamesROIs.addItem(&#34;region1&#34;)
             self.cmbNamesROIs.setCurrentIndex(0) 
+            self.cmbNamesROIs.blockSignals(False)
             self.roiMeanTxt.clear()
             self.roiStdDevTxt.clear()
             self.lblPixelValue.clear()
@@ -1078,8 +1083,9 @@ sliders for browsing series of images.</p></div>
                     msgBox.setWindowTitle(&#34;ROI Name Change&#34;)
                     msgBox.setText(&#34;This name is already in use&#34;)
                     msgBox.exec()
+                    self.cmbNamesROIs.blockSignals(True)
                     cmbNamesROIs.setCurrentText(self.graphicsView.dictROIs.prevRegionName)
-
+                    self.cmbNamesROIs.blockSignals(False)
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e))
                 logger.exception(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e)) 
@@ -1219,7 +1225,9 @@ sliders for browsing series of images.</p></div>
                 # Redisplay the current image to show the mask
                 #mask = graphicsView.dictROIs.getMask(region, 1)
                 #graphicsView.graphicsItem.reloadMask(mask)
+                self.cmbNamesROIs.blockSignals(True)
                 self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+                self.cmbNamesROIs.blockSignals(False)
                 self.loadImageInImageItem()
         except Exception as e:
                 print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
@@ -1615,9 +1623,11 @@ sliders for browsing series of images.</p></div>
         self.loadImageInImageItem() 
         self.displayROIMeanAndStd()
         if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
+            self.cmbNamesROIs.blockSignals(True)
             self.cmbNamesROIs.clear()
             self.cmbNamesROIs.addItem(&#34;region1&#34;)
             self.cmbNamesROIs.setCurrentIndex(0) 
+            self.cmbNamesROIs.blockSignals(False)
             self.roiMeanTxt.clear()
             self.roiStdDevTxt.clear()
             self.lblPixelValue.clear()
@@ -1899,9 +1909,11 @@ sliders for browsing series of images.</p></div>
     self.loadImageInImageItem() 
     self.displayROIMeanAndStd()
     if self.cmbNamesROIs.currentIndex() == 0 and self.cmbNamesROIs.count() == 1: 
+        self.cmbNamesROIs.blockSignals(True)
         self.cmbNamesROIs.clear()
         self.cmbNamesROIs.addItem(&#34;region1&#34;)
         self.cmbNamesROIs.setCurrentIndex(0) 
+        self.cmbNamesROIs.blockSignals(False)
         self.roiMeanTxt.clear()
         self.roiStdDevTxt.clear()
         self.lblPixelValue.clear()
@@ -2226,7 +2238,9 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
             # Redisplay the current image to show the mask
             #mask = graphicsView.dictROIs.getMask(region, 1)
             #graphicsView.graphicsItem.reloadMask(mask)
+            self.cmbNamesROIs.blockSignals(True)
             self.cmbNamesROIs.setCurrentIndex(self.cmbNamesROIs.count() - 1)
+            self.cmbNamesROIs.blockSignals(False)
             self.loadImageInImageItem()
     except Exception as e:
             print(&#39;Error in ImageViewerROI.loadROI: &#39; + str(e))
@@ -2303,8 +2317,9 @@ Also, sets the contrast and intensity in the associated histogram.</p></div>
                 msgBox.setWindowTitle(&#34;ROI Name Change&#34;)
                 msgBox.setText(&#34;This name is already in use&#34;)
                 msgBox.exec()
+                self.cmbNamesROIs.blockSignals(True)
                 cmbNamesROIs.setCurrentText(self.graphicsView.dictROIs.prevRegionName)
-
+                self.cmbNamesROIs.blockSignals(False)
     except Exception as e:
             print(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e))
             logger.exception(&#39;Error in ImageViewerROI.roiNameChanged: &#39; + str(e)) </code></pre>
