--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/Resources.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/Resources.html
@@ -46,7 +46,7 @@ EXPORT_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#3
 CONTRAST_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#39;,&#39;FreeHandROI&#39;,&#39;Icons&#39;,&#39;contrast_icon.png&#39;)
 BRIGHTNESS_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#39;,&#39;FreeHandROI&#39;,&#39;Icons&#39;,&#39;brightness_icon.png&#39;)
 APPLY_SERIES_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#39;,&#39;FreeHandROI&#39;,&#39;Icons&#39;,&#39;applySeries_icon.png&#39;)
-SLIDER_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#39;,&#39;Images&#39;,&#39;slider_icon.png&#39;)</code></pre>
+SLIDER_ICON = os.path.join(directory,&#39;ImageViewers&#39;,&#39;ComponentsUI&#39;,&#39;FreeHandROI&#39;,&#39;Icons&#39;,&#39;slider_icon.png&#39;)</code></pre>
 </details>
 </section>
 <section>
