--- a/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
+++ b/Displays/ImageViewers/ComponentsUI/FreeHandROI/GraphicsItem.html
@@ -200,8 +200,11 @@ class GraphicsItem(QGraphicsObject):
         try:
             self.xMouseCoord = int(event.pos().x()) #columns
             self.yMouseCoord = int(event.pos().y()) #rows
-            self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
-            self.sigMouseHovered.emit(True)
+            maxRow, maxCol = self.pixelArray.shape
+            if self.yMouseCoord &lt; maxRow and self.xMouseCoord &lt; maxCol:
+                #only get pixel value when mouse pointer is over the image
+                self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
+                self.sigMouseHovered.emit(True)
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent when xMouseCoord={}, yMouseCoord={}: &#39;.format(self.xMouseCoord, self.yMouseCoord) + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent: &#39; + str(e))
@@ -837,8 +840,11 @@ def readLevels(path, pixelArray):
         try:
             self.xMouseCoord = int(event.pos().x()) #columns
             self.yMouseCoord = int(event.pos().y()) #rows
-            self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
-            self.sigMouseHovered.emit(True)
+            maxRow, maxCol = self.pixelArray.shape
+            if self.yMouseCoord &lt; maxRow and self.xMouseCoord &lt; maxCol:
+                #only get pixel value when mouse pointer is over the image
+                self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
+                self.sigMouseHovered.emit(True)
         except Exception as e:
             print(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent when xMouseCoord={}, yMouseCoord={}: &#39;.format(self.xMouseCoord, self.yMouseCoord) + str(e))
             logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent: &#39; + str(e))
@@ -1564,8 +1570,11 @@ def readLevels(path, pixelArray):
     try:
         self.xMouseCoord = int(event.pos().x()) #columns
         self.yMouseCoord = int(event.pos().y()) #rows
-        self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
-        self.sigMouseHovered.emit(True)
+        maxRow, maxCol = self.pixelArray.shape
+        if self.yMouseCoord &lt; maxRow and self.xMouseCoord &lt; maxCol:
+            #only get pixel value when mouse pointer is over the image
+            self.pixelValue = self.pixelArray[self.yMouseCoord, self.xMouseCoord]
+            self.sigMouseHovered.emit(True)
     except Exception as e:
         print(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent when xMouseCoord={}, yMouseCoord={}: &#39;.format(self.xMouseCoord, self.yMouseCoord) + str(e))
         logger.error(&#39;Error in FreeHandROI.GraphicsItem.hoverMoveEvent: &#39; + str(e))</code></pre>
